force-app/main/default/objects/Candidates__c/fields/CanD_T__c.field-meta.xml
<CustomField>
    <fullName>CanD_T__c</fullName>
    <label>CanD&amp;T</label>
    <type>DateTime</type>
</CustomField>