force-app/main/default/objects/Candidates__c/fields/CanInterest__c.field-meta.xml
<CustomField>
    <fullName>CanInterest__c</fullName>
    <label>CanInterest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>