force-app/main/default/objects/Candidates__c/fields/CanNum__c.field-meta.xml
<CustomField>
    <fullName>CanNum__c</fullName>
    <displayFormat>A-{00}</displayFormat>
    <label>CanNum</label>
    <type>AutoNumber</type>
</CustomField>