force-app/main/default/objects/Candidates__c/fields/cDetail__c.field-meta.xml
<CustomField>
    <fullName>cDetail__c</fullName>
    <label>cDetail</label>
    <type>TextArea</type>
</CustomField>