force-app/main/default/objects/Candidates__c/fields/CStatus__c.field-meta.xml
<CustomField>
    <fullName>CStatus__c</fullName>
    <label>CStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>