force-app/main/default/objects/Candidates__c/fields/Manage_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Manage_Brokerage__c</fullName>
    <label>Manage Brokerage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>