force-app/main/default/objects/Candidates__c/fields/NumberOfCan__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCan__c</fullName>
    <label>NumberOfCan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>