force-app/main/default/objects/Candidates__c/fields/WebsiteURL__c.field-meta.xml
<CustomField>
    <fullName>WebsiteURL__c</fullName>
    <label>WebsiteURL</label>
    <type>Url</type>
</CustomField>